--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+table, th, td {
+    border: 1px solid black;
+}
+</style>
 <meta charset="UTF-8">
 <title>Title of the document</title>
 </head>
@@ -15,11 +20,25 @@
     </div>
 
     <div align="left" style="width: 600px; background-color: rgb(69, 192, 208); margin-left: auto; margin-right: auto">
-    <p>git push using ssh key c</p>
-    <h2>types of cofsfee:</h2>
-    <h4>1)square</h4>
-    <h4>2)round</h4>
-    <h4>3)triangular</h4>
+    <h2>types of coffee</h2>
+      <ol>
+        <li>square</li>
+        <li>round</li>
+        <li>triangular</li>
+      </ol>
+      <table>
+        <tr>
+          <th>quantity</th>
+          <th>price</th>
+        </tr>
+        <th>99 capsules</th>
+        <th>17.9$</th>
+      </table>
+    <h3>our contakts: </h3>
+    <ol>
+      <li><a href="https://vk.com">we in VK</a></li>
+      <li><a href="https://www.gmail.com/intl/en/mail/help/about.html">our mail</a></li>
+    </ol>
   </div>
   </div>
 
